packages/relay-compiler/transforms/__tests__/__snapshots__/RelayDeferStreamTransform-test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-defer.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ...DeferredFragment @defer(label: "DeferredFragmentLabel")
}

fragment DeferredFragment on User {
  id
  name
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ...DeferredFragment @defer(label: "UserFragment$defer$DeferredFragmentLabel")
}

fragment DeferredFragment on User {
  id
  name
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-defer-arguments.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ...DeferredFragment @defer(label: "DeferredFragmentLabel") @arguments(scale: 1.5)
}

fragment DeferredFragment on User
@argumentDefinitions(scale: {type: "Float"}) {
  id
  name
  profile_picture(scale: $scale) {
    uri
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ...DeferredFragment @defer(label: "UserFragment$defer$DeferredFragmentLabel") @arguments(scale: 1.5)
}

fragment DeferredFragment on User @argumentDefinitions(
  scale: {type: "Float"}
) {
  id
  name
  profile_picture(scale: $scale) {
    uri
  }
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-defer-default-label.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ...DeferredFragment @defer
}

fragment DeferredFragment on User {
  id
  name
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ...DeferredFragment @defer(label: "UserFragment$defer$DeferredFragment")
}

fragment DeferredFragment on User {
  id
  name
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-defer-duplicate-label.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# expected-to-throw
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ...DeferredFragment @defer(label: "deferred")
  ...OtherDeferredFragment @defer(label: "deferred")
}

fragment DeferredFragment on User {
  id
  name
}

fragment OtherDeferredFragment on User {
  id
  name
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: Encountered 1 error(s):
- Invalid use of @defer, the provided label is not unique. Specify a unique 'label' as a literal string.
  
  Source: GraphQL request (13:35)
  12:   ...DeferredFragment @defer(label: "deferred")
  13:   ...OtherDeferredFragment @defer(label: "deferred")
                                        ^
  14: }
  
  Source: GraphQL request (12:30)
  11:   emailAddresses
  12:   ...DeferredFragment @defer(label: "deferred")
                                   ^
  13:   ...OtherDeferredFragment @defer(label: "deferred")
  
`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-defer-if-arg.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer($enableDefer: Boolean) {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ...DeferredFragment @defer(label: "DeferredFragmentLabel", if: $enableDefer)
}

fragment DeferredFragment on User {
  id
  name
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer(
  $enableDefer: Boolean
) {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ...DeferredFragment @defer(label: "UserFragment$defer$DeferredFragmentLabel", if: $enableDefer)
}

fragment DeferredFragment on User {
  id
  name
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-defer-statically-disabled.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ...DeferredFragment @defer(label: "DeferredFragmentLabel", if: false)
}

fragment DeferredFragment on User {
  id
  name
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ...DeferredFragment
}

fragment DeferredFragment on User {
  id
  name
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-stream.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithStream($id: ID!) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors @stream(initial_count: 1, label: "StreamedActorsLabel") {
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithStream(
  $id: ID!
) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors @stream(label: "FeedbackFragment$stream$StreamedActorsLabel", initial_count: 1) {
    name
  }
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-stream-default-label.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithStream($id: ID!) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors @stream(initial_count: 1) {
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithStream(
  $id: ID!
) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors @stream(label: "FeedbackFragment$stream$actors", initial_count: 1) {
    name
  }
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-stream-duplicate-label.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# expected-to-throw
query QueryWithFragmentWithStream($id: ID!) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors @stream(initial_count: 1, label: "actors") {
    name
  }
  otherActors: actors
  @stream(initial_count: 1, label: "actors") { # invalid: duplicate label
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: Encountered 1 error(s):
- Invalid use of @stream, the provided label is not unique. Specify a unique 'label' as a literal string.
  
  Source: GraphQL request (15:29)
  14:   otherActors: actors
  15:   @stream(initial_count: 1, label: "actors") { # invalid: duplicate label
                                  ^
  16:     name
  
  Source: GraphQL request (11:36)
  10:   id
  11:   actors @stream(initial_count: 1, label: "actors") {
                                         ^
  12:     name
  
`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-stream-if-arg.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithStream($id: ID!, $enableStream: Boolean) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors @stream(initial_count: 1, label: "StreamedActorsLabel", if: $enableStream) {
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithStream(
  $id: ID!
  $enableStream: Boolean
) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors @stream(label: "FeedbackFragment$stream$StreamedActorsLabel", if: $enableStream, initial_count: 1) {
    name
  }
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-stream-initial-count-arg.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithStream($id: ID!, $initialCount: Int) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors @stream(initial_count: $initialCount, label: "StreamedActorsLabel") {
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithStream(
  $id: ID!
  $initialCount: Int
) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors @stream(label: "FeedbackFragment$stream$StreamedActorsLabel", initial_count: $initialCount) {
    name
  }
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-stream-missing-initial-count-arg.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# expected-to-throw
query QueryWithFragmentWithStream($id: ID!, $initialCount: Int) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors @stream(label: "StreamedActorsLabel") { # invalid: missing initial_count
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: Encountered 1 error(s):
- Invalid use of @stream, the 'initial_count' argument is required.
  
  Source: GraphQL request (11:10)
  10:   id
  11:   actors @stream(label: "StreamedActorsLabel") { # invalid: missing initial_count
               ^
  12:     name
  
`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-stream-statically-disabled.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithStream($id: ID!) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors @stream(initial_count: 1, label: "StreamedActorsLabel", if: false) {
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithStream(
  $id: ID!
) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors {
    name
  }
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-stream-variable-label.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# expected-to-throw
query QueryWithFragmentWithStream($id: ID!, $label: String!) {
  node(id: $id) {
    id
    ...FeedbackFragment
  }
}

fragment FeedbackFragment on Feedback {
  id
  actors @stream(initial_count: 1, label: $label) {
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: Encountered 1 error(s):
- Expected the 'label' value to @stream to be a string literal if provided.
  
  Source: GraphQL request (11:43)
  10:   id
  11:   actors @stream(initial_count: 1, label: $label) {
                                                ^
  12:     name
  
`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: fragment-with-variable-label.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# expected-to-throw
query QueryWithFragmentWithDefer($label: String!) {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ...DeferredFragment @defer(label: $label)
}

fragment DeferredFragment on User {
  id
  name
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: Encountered 1 error(s):
- Expected the 'label' value to @defer to be a string literal if provided.
  
  Source: GraphQL request (12:37)
  11:   emailAddresses
  12:   ...DeferredFragment @defer(label: $label)
                                          ^
  13: }
  
`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: inline-fragment-with-defer.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ... on User @defer(label: "DeferredFragmentLabel") {
    id
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ... on User @defer(label: "UserFragment$defer$DeferredFragmentLabel") {
    id
    name
  }
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: inline-fragment-with-defer-default-label.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ... on User @defer {
    id
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ... on User @defer(label: "UserFragment$defer$User") {
    id
    name
  }
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: inline-fragment-with-defer-duplicate-label.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# expected-to-throw
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ... on User @defer {
    id
    name
  }
  ... on User @defer { # invalid: duplicate label
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: Encountered 1 error(s):
- Invalid use of @defer, could not generate a default label that is unique. Specify a unique 'label' as a literal string.
  
  Source: GraphQL request (16:15)
  15:   }
  16:   ... on User @defer { # invalid: duplicate label
                    ^
  17:     name
  
  Source: GraphQL request (12:15)
  11:   emailAddresses
  12:   ... on User @defer {
                    ^
  13:     id
  
`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: inline-fragment-with-defer-statically-disabled.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ... on User @defer(label: "DeferredFragmentLabel", if: false) {
    id
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithFragmentWithDefer {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ... on User {
    id
    name
  }
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: inline-fragment-with-variable-label.invalid.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
# expected-to-throw
query QueryWithFragmentWithDefer($label: String!) {
  me {
    id
    ...UserFragment
  }
}

fragment UserFragment on User {
  id
  emailAddresses
  ... on User @defer(label: $label) {
    id
    name
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: Encountered 1 error(s):
- Expected the 'label' value to @defer to be a string literal if provided.
  
  Source: GraphQL request (12:29)
  11:   emailAddresses
  12:   ... on User @defer(label: $label) {
                                  ^
  13:     id
  
`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: query-with-defer.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithDefer {
  me {
    id
    ...DeferredFragment @defer(label: "DeferredFragmentLabel")
  }
}

fragment DeferredFragment on User {
  id
  name
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithDefer {
  me {
    id
    ...DeferredFragment @defer(label: "QueryWithDefer$defer$DeferredFragmentLabel")
  }
}

fragment DeferredFragment on User {
  id
  name
}

`;

exports[`RelayDeferStreamTransform when streaming is enabled matches expected output: query-with-stream.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query QueryWithStream($id: ID!) {
  node(id: $id) {
    ... on Feedback {
      actors @stream(initial_count: 1, label: "StreamedActorsLabel") {
        name
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query QueryWithStream(
  $id: ID!
) {
  node(id: $id) {
    ... on Feedback {
      actors @stream(label: "QueryWithStream$stream$StreamedActorsLabel", initial_count: 1) {
        name
      }
    }
  }
}

`;
